# controls_project

./: .gitignore  CMakeLists.txt  README.md  package.xml  test
archie_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
archie_moveit_config/config/: archie_urdf.xml  controllers.yaml  joint_limits.yaml  ompl_planning.yaml  pr2.srdf
archie_moveit_config/launch/: control.launch  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  pr2_moveit_controller_manager.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
cloth_tracking/: CMakeLists.txt  KinectOpenCV.sln  ReadMe.txt  package.xml
cloth_tracking/KinectOpenCV/: Cluster.cpp  Cluster.h  ColorBasics.cpp  ColorBasics.h  DBSCAN.cpp  DBSCAN.h  KinectData.cpp  KinectData.h  KinectOpenCV.cpp  KinectOpenCV.vcxproj  KinectOpenCV.vcxproj.filters  Mesh.cpp  Mesh.h  OpenCV_3_64.props  PtDBSCAN.cpp  PtDBSCAN.h  RealtimeDepthMatlab.m  data.csv  plotMesh.m  stdafx.cpp  tpsPython.py
cloth_tracking/cmake/: FindOpenCV3Custom.cmake
cloth_tracking/include/cloth_tracking/: Mesh.h  cloth_tracking_node.h
cloth_tracking/src/: Mesh.cpp  cloth_tracking_node.cpp  cloth_tracking_node.cpp.bk
controls_project_launch_files/: CMakeLists.txt  package.xml
controls_project_launch_files/launch/: correct_archie_base_frame.launch  kinect2_retimer.launch  planner.launch  planner_sim_world.launch  pr2_gripper_controls.launch  sim_world.launch  static_transforms.launch  synchronizer.launch  world_planner_bridge.launch
include/controls_project/: servoing_controller.hpp
kinect2_retimer/: CMakeLists.txt  package.xml
kinect2_retimer/src/: kinect2_retimer_node.cpp
launch/: pr2_test.launch
pr2_cartesian_controller/: CMakeLists.txt  README.md  package.xml
pr2_cartesian_controller/config/: pr2.srdf
pr2_cartesian_controller/include/pr2_cartesian_controller/: servoing_controller.hpp
pr2_cartesian_controller/launch/: pr2_test.launch
pr2_cartesian_controller/src/: cp_left_arm_controller.cpp  cp_right_arm_controller.cpp  servoing_controller.cpp
pr2_cartesian_controller/worlds/: controls_project.world
src/: cp_left_arm_controller.cpp  cp_right_arm_controller.cpp  right_arm_controller.cpp  servoing_controller.cpp
synchronizer/: CMakeLists.txt  package.xml
synchronizer/include/synchronizer/: synchronizer_ros_params.hpp  table_sdf.hpp
synchronizer/src/: synchronizer_node.cpp
worlds/: controls_project.world
